0024892: AIS_TexturedShape::ShowTriangles overloads mismatch